--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".scoreboard"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".scoreboard" />
+        <activity android:name=".AboutUs"></activity>
     </application>
 
 </manifest>
