--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,24 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Home">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action
+                    android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".scoreboard" />
-        <activity android:name=".AboutUs"></activity>
+
+
+        <activity
+            android:name=".MainActivity"
+            />
+        <activity
+            android:name=".scoreboard"
+            android:label="@string/scoreboard"
+            />
+        <activity
+            android:name=".AboutUs"
+            android:label="@string/aboutus"
+            />
     </application>
 
 </manifest>
