--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home">
+        <activity android:name=".LoadingScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,8 +22,9 @@
             android:label="@string/aboutus" />
         <activity
             android:name=".DrinkingRules"
-            android:label="@string/DrinkingRules"></activity>
-        <activity android:name=".StartGameActivity"></activity>
+            android:label="@string/DrinkingRules" />
+        <activity android:name=".StartGameActivity" />
+        <activity android:name=".Home"></activity>
     </application>
 
 </manifest>
